userId가 아닌 닉네임으로 표시되도록 수정

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 bAutoWidth: false,	// 자동 컬럼 폭을 계산하여 반영한다.
                 processing: false,	// "true"로 주면 값을 가져오는 등의 처리 상황에서 대기가 발생할 때, "processing"인디케이터를 보여준다.
                 ordering: false,	// 항목들에 대한 정렬을 사용할 것인가를 결정한다.
-                serverSide: false,	// 그리드 내에서 이루어지는 모든 상황들(검색, 페이징, 정렬 등)에 대한 처리를 서버측에서 수행할 것인가를 뜻한다. 
-                					// "false"로 주면 처음 한번 서버에서 모든 데이터를 다 가져온 뒤, 각각의 상황에 맞게 클라이언트에서 처리한다. 
-                					// 데이터의 양이 적을 것이라는 확신이 있다면 "false"인 것이 더 유리하다. 
-                					// 하지만 데이터 양이 많다면 한번에 너무 많은 데이터를 가져와야 하기 때문에 첫 로딩에 많은 시간이 걸리고 오류가 발생할 수 있다. 
-                					// 그 데이터 양의 기준은 약 1만건이라고 하는데, 5천건이 넘어가는 순간부터 속도의 저하가 오는 듯 하다. 
-                					// "ServerSide"를 사용하기 위해서는 서버단의 처리에 다소 많은 작업이 추가되어 화면 별로 미리 결정하고 개발에 들어가는 것이 좋다. 
+                serverSide: false,	// 그리드 내에서 이루어지는 모든 상황들(검색, 페이징, 정렬 등)에 대한 처리를 서버측에서 수행할 것인가를 뜻한다.
+                					// "false"로 주면 처음 한번 서버에서 모든 데이터를 다 가져온 뒤, 각각의 상황에 맞게 클라이언트에서 처리한다.
+                					// 데이터의 양이 적을 것이라는 확신이 있다면 "false"인 것이 더 유리하다.
+                					// 하지만 데이터 양이 많다면 한번에 너무 많은 데이터를 가져와야 하기 때문에 첫 로딩에 많은 시간이 걸리고 오류가 발생할 수 있다.
+                					// 그 데이터 양의 기준은 약 1만건이라고 하는데, 5천건이 넘어가는 순간부터 속도의 저하가 오는 듯 하다.
+                					// "ServerSide"를 사용하기 위해서는 서버단의 처리에 다소 많은 작업이 추가되어 화면 별로 미리 결정하고 개발에 들어가는 것이 좋다.
                 					// 추후 수정에 들어가는 공수가 많을 것이기 때문이다.
                 searching: false,	// 글로벌 searching 기능을 제공하는데, 타이핑한 캐릭터 별로 검색이 자동 적용되기 때문에 상당히 강력하다.
                 ajax : {
@@ -65,9 +65,9 @@
                 },
                 columns : [
                     {data: "account", "render": function (data) {
-                    	return '<div style="position: relative; z-index: 1;"><img width=39 height=39 src="'+data.icon.iconImageUrl+'" /></div>' + 
+                    	return '<div style="position: relative; z-index: 1;"><img width=39 height=39 src="'+data.icon.iconImageUrl+'" /></div>' +
                     			'<div style="position: relative; z-index: 2; top: -40px;height: 0;"><img width=40 height=40 src="'+data.icon.borderImageUrl+'" /></div>'}},
-                    {data: "account.userId"},
+                    {data: "account.nickName"},
                     {data: "title"},
                     {data: "viewCount"},
                     {data: "createdDate"}
@@ -348,7 +348,7 @@
 				    </thead>
 				    <!-- tbody 태그 필요 없다. -->
 				</table>
-				
+
 				<table id="gridNotice" class="table table-striped table-bordered table-hover" >
 				    <thead>
 				        <tr>
@@ -361,7 +361,7 @@
 				    </thead>
 				    <!-- tbody 태그 필요 없다. -->
 				</table>
-				
+
 				<div class="container-fluid container-fixed-lg">
 					<!-- BEGIN PlACE PAGE CONTENT HERE -->
 					<!-- END PLACE PAGE CONTENT HERE -->
