--- a/game.html
+++ b/game.html
@@ -310,6 +310,9 @@
 						class="header-icon pg pg-thumbs"></a></li>
 								</ul>
 								<div>
+									<a href="register.html"><span>Sing Up</span></a>
+								</div>
+								<div>
 									<a href="login.html"><span>Log In</span></a>
 								</div>
 								<!-- END NOTIFICATIONS LIST -->
