각 게시판 추가 및 연결 추가 모듈화에 대해선 다시 생각해 보는 것으로 함. 추가 후 각 게시판에 대한 branch로 작업 예정.

--- a/game.html
+++ b/game.html
@@ -141,15 +141,15 @@
 							class="icon-thumbnail">sp</span></li>
 						</ul>
 					</li>
-					<li class=""><a href="#"> <span class="title">청원 게시판</span>
+					<li class=""><a href="request.html"> <span class="title">청원 게시판</span>
 				</a> <span class="icon-thumbnail "><i data-feather="shield"></i></span></li>
-					<li class=""><a href="#"> <span class="title">후원 게시판</span>
+					<li class=""><a href="support.html"> <span class="title">후원 게시판</span>
 				</a> <span class="icon-thumbnail "><i data-feather="list"></i></span></li>
-					<li class=""><a href="#"> <span class="title" onclick="callBoard();">게임 게시판</span>
+					<li class=""><a href="game.html"> <span class="title">게임 게시판</span>
 				</a> <span class="icon-thumbnail "><i data-feather="list"></i></span></li>
-					<li class=""><a href="#"> <span class="title">공략 게시판</span>
+					<li class=""><a href="tactics.html"> <span class="title">공략 게시판</span>
 				</a> <span class="icon-thumbnail "><i data-feather="list"></i></span></li>
-					<li class=""><a href="#"> <span class="title">이슈 게시판</span>
+					<li class=""><a href="humor.html"> <span class="title">유머 게시판</span>
 				</a> <span class="icon-thumbnail "><i data-feather="list"></i></span></li>
 				</ul>
 				<div class="clearfix"></div>
@@ -363,7 +363,7 @@
 								<div class="inner">
 									<!-- START BREADCRUMB -->
 									<ol class="breadcrumb">
-										<li class="breadcrumb-item active">공지사항</li>
+										<li class="breadcrumb-item active">게임 게시판</li>
 									</ol>
 									<!-- END BREADCRUMB -->
 								</div>
