--- a/tactics.html
+++ b/tactics.html
@@ -39,16 +39,18 @@
 
 	<script type="text/javascript" class="code-js">
 		$(document).ready(function() {
-			$('#gridNotice').DataTable({
-				pageLength: 5, // 한 페이지에 기본으로 보여줄 항목 수
+			var boardType = "GAME";
+			var url = "http://13.124.92.184:9320/board/list?boardType=" + boardType;
+			$('#gridGame').DataTable({
+				pageLength: 3, // 한 페이지에 기본으로 보여줄 항목 수
 				bPaginate: false, // 페이징 처리를 할 것인지를 정한다. "false"로 주면 "pageLength"와는 관계 없이 전체 데이터를 출력한다
-				bLengthChange: true, // 한 페이지에 보여줄 항목 수를 변경할 것인지를 정한다. "true"로 주면 그리드에 리스트박스를 추가한다.
+				bLengthChange: false, // 한 페이지에 보여줄 항목 수를 변경할 것인지를 정한다. "true"로 주면 그리드에 리스트박스를 추가한다.
 				lengthMenu: [
 					[3, 5, 10, -1],
 					[3, 5, 10, "All"]
 				], // "bLengthChange" 리스트 항목을 구성할 옵션들을 정해준다.
-				bInfo: false, // Showing ~~ 문구 삭제
 				bAutoWidth: false, // 자동 컬럼 폭을 계산하여 반영한다.
+				bInfo: false, // Showing ~~ 문구 삭제
 				processing: false, // "true"로 주면 값을 가져오는 등의 처리 상황에서 대기가 발생할 때, "processing"인디케이터를 보여준다.
 				ordering: false, // 항목들에 대한 정렬을 사용할 것인가를 결정한다.
 				serverSide: false, // 그리드 내에서 이루어지는 모든 상황들(검색, 페이징, 정렬 등)에 대한 처리를 서버측에서 수행할 것인가를 뜻한다.
@@ -60,7 +62,7 @@
 				// 추후 수정에 들어가는 공수가 많을 것이기 때문이다.
 				searching: false, // 글로벌 searching 기능을 제공하는데, 타이핑한 캐릭터 별로 검색이 자동 적용되기 때문에 상당히 강력하다.
 				ajax: {
-					"url": "http://13.124.92.184:9320/notice/list",
+					"url": url,
 					"type": "GET",
 					"dataSrc": "",
 					"data": function(d) {}
@@ -73,6 +75,12 @@
 						}
 					},
 					{
+						data: "account.level"
+					},
+					{
+						data: "account.icon.iconName"
+					},
+					{
 						data: "account.nickName"
 					},
 					{
@@ -83,6 +91,16 @@
 					},
 					{
 						data: "createdDate"
+					},
+					{
+						data: "previewImageUrl",
+						"render": function(data) {
+							//alert(data);
+							if (data != null)
+								return '<img width=40 height=40 src="' + data + '"/>';
+							else
+								return null;
+						}
 					}
 				]
 			});
@@ -345,7 +363,7 @@
 								<div class="inner">
 									<!-- START BREADCRUMB -->
 									<ol class="breadcrumb">
-										<li class="breadcrumb-item active">공지사항</li>
+										<li class="breadcrumb-item active">공략 게시판</li>
 									</ol>
 									<!-- END BREADCRUMB -->
 								</div>
@@ -353,17 +371,19 @@
 						</div>
 						<!-- END JUMBOTRON -->
 						<!-- START CONTAINER FLUID -->
-						<table id="gridNotice" class="table table-striped table-bordered table-hover">
+						<table id="gridGame" class="table table-striped table-bordered table-hover">
 							<thead>
 								<tr>
 									<th>icon</th>
-									<th>userId</th>
+									<th>level</th>
+									<th>type</th>
+									<th>nickName</th>
 									<th>title</th>
 									<th>viewCount</th>
 									<th>createdDate</th>
+									<th>previewImageUrl</th>
 								</tr>
 							</thead>
-							<!-- tbody 태그 필요 없다. -->
 						</table>
 
 						<div class="container-fluid container-fixed-lg">
