--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<!--<%@ page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>-->
 	<meta charset="UTF-8" />
 	<title>천사와 악마의 놀이터 미드나잇클럽 - Midnight Club</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name=”viewport” content=”initial-scale=1, maximum-scale=1, user-scalable=no”>
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />-->
 	<link rel="apple-touch-icon" href="pages/ico/60.png">
 	<link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="pages/ico/120.png">
@@ -153,9 +154,9 @@
 						<!-- END MOBILE SIDEBAR TOGGLE -->
 						<div class="">
 							<div class="brand inline">
-								<img src="assets/img/logo.png" alt="logo"
-						data-src="assets/img/logo.png"
-						data-src-retina="assets/img/logo_2x.png" width="78" height="22">
+								<img src="assets/img/logo_midnight_club.png" alt="logo"
+						data-src="assets/img/logo_midnight_club.png"
+						data-src-retina="assets/img/logo_midnight_club_2x.png" width="170" height="50">
 				</div>
 								<a href="#"
 					class="btn btn-link text-primary m-l-20 d-none d-lg-inline-block d-xl-inline-block">Add
@@ -799,9 +800,9 @@
 							<!-- BEGIN Overlay Header !-->
 							<div class="container-fluid">
 								<!-- BEGIN Overlay Logo !-->
-								<img class="overlay-brand" src="assets/img/logo.png" alt="logo"
-					data-src="assets/img/logo.png"
-					data-src-retina="assets/img/logo_2x.png" width="78" height="22">
+								<img class="overlay-brand" src="assets/img/logo_midnight_club.png" alt="logo"
+					data-src="assets/img/logo_midnight_club.png"
+					data-src-retina="assets/img/logo_midnight_club_2x.png" width="170" height="50">
 								<!-- END Overlay Logo !-->
 								<!-- BEGIN Overlay Close !-->
 								<a href="#" class="close-icon-light overlay-close text-black fs-16">
