--- a/tactics.html
+++ b/tactics.html
@@ -171,9 +171,9 @@
 						<!-- END MOBILE SIDEBAR TOGGLE -->
 						<div class="">
 							<div class="brand inline">
-								<img src="assets/img/logo.png" alt="logo"
-						data-src="assets/img/logo.png"
-						data-src-retina="assets/img/logo_2x.png" width="78" height="22">
+								<img src="assets/img/logo_midnight_club.png" alt="logo"
+						data-src="assets/img/logo_midnight_club.png"
+						data-src-retina="assets/img/logo_midnight_club_2x.png" width="170" height="50">
 				</div>
 								<a href="#"
 					class="btn btn-link text-primary m-l-20 d-none d-lg-inline-block d-xl-inline-block">Add
@@ -819,9 +819,9 @@
 							<!-- BEGIN Overlay Header !-->
 							<div class="container-fluid">
 								<!-- BEGIN Overlay Logo !-->
-								<img class="overlay-brand" src="assets/img/logo.png" alt="logo"
-					data-src="assets/img/logo.png"
-					data-src-retina="assets/img/logo_2x.png" width="78" height="22">
+								<img class="overlay-brand" src="assets/img/logo_midnight_club.png" alt="logo"
+					data-src="assets/img/logo_midnight_club.png"
+					data-src-retina="assets/img/logo_midnight_club_2x.png" width="170" height="50">
 								<!-- END Overlay Logo !-->
 								<!-- BEGIN Overlay Close !-->
 								<a href="#" class="close-icon-light overlay-close text-black fs-16">
