글 작성 버튼 추가

--- a/request.html
+++ b/request.html
@@ -367,6 +367,11 @@
 									</ol>
 									<!-- END BREADCRUMB -->
 								</div>
+								<div>
+									<button type="button" class="btn btn-default btn-sm">
+			          		<span class="glyphicon glyphicon-pencil"></span> 글 작성
+			        		</button>
+								</div>
 							</div>
 						</div>
 						<!-- END JUMBOTRON -->
