청원 게시판을 통해 글작성 가능하게 수정함. backend 와 통신은 아직 이뤄지지 않음.

--- a/request.html
+++ b/request.html
@@ -146,8 +146,8 @@
 								<!-- END BREADCRUMB -->
 							</div>
 							<div>
-								<button type="button" class="btn btn-default btn-sm">
-			          		<span class="glyphicon glyphicon-pencil"></span> 글 작성
+								<button type="button" class="btn btn-default btn-sm"><a href="write.html">
+			          		<span class="glyphicon glyphicon-pencil"></span> 글 작성</a>
 			        		</button>
 							</div>
 						</div>
