title 추가 login.html에서 accountToken data 변수 추가

--- a/login.html
+++ b/login.html
@@ -329,8 +329,6 @@
 
 				return ConvertedJSON
 			}
-		</script>
-		<script>
 			function formLoginSubmit() {
 				var jsonData = formDataToJSON(document.getElementById('form-login'));
 				$.ajax({
@@ -344,6 +342,7 @@
 					},
 					success: function(result) {
 						alert(JSON.stringify(result));
+						localStorage.setItem("accountToken", result);
 					},
 					error: function(result) {
 						alert(result);
