Token 저장 하지 않고, 새글쓰기 초기화함

--- a/login.html
+++ b/login.html
@@ -341,8 +341,8 @@
 						'Access-Control-Allow-Origin': 'http://13.124.92.184'
 					},
 					success: function(result) {
-						alert(JSON.stringify(result));
-						localStorage.setItem("accountToken", result);
+						console.log(result);
+						// localStorage.setItem("accountToken", result);
 					},
 					error: function(result) {
 						alert(result);
